syntax = "proto3";

package onight.zjfae.afront.gensazj;
option java_outer_classname="FaceProtol";
//Generated By BrewRobot:Tue Dec 12 11:13:14 CST 2017

message PBAPP_faceprotol{
	//


}

message Ret_PBAPP_faceprotol{
	//

	string returnCode=1;	//报文头

	string returnMsg=2;	//报文头

	PBAPP_faceprotol data=3;


}

message REQ_PBAPP_faceprotol{
	//

	string mobile = 1; //,手机号,String,不校验,是,

	string isMarkProtocol = 2; //,是否签署协议书,String,不校验,是,

	string failTimes = 3; //,失败次数,String,不校验,是,
	
	string certificateCode =4; //,身份证号,String,不校验,是,

}